#367 fix initial drawer state on mobile

--- a/website/static/style.css
+++ b/website/static/style.css
@@ -113,12 +113,6 @@ dl.field-list p {
   }
 }
 
-@media only screen and (max-width: 600px) {
-  .q-drawer {
-    display: none;
-  }
-}
-
 /* google-webfonts-helper (https://gwfh.mranftl.com/fonts) */
 /* fira-sans-regular - latin */
 @font-face {
